2024_06_04 - добавлена команда добавления нового навыка