@@ -5,10 +5,7 @@ import ru.animalpack.view.Menu;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.Scanner;
+import java.util.*;
 
 public abstract class Animals {
     int id;
@@ -71,7 +68,8 @@ public abstract class Animals {
         this.birthDate     = Menu.enterDate();
         this.color         = Menu.enterStringValue("Укажите цвет в свободной форме", false);
         this.breed         = Menu.enterStringValue("Укажите породу", false);
-        this.commands      = Menu.enterStringList("Укажите, какие команды умеет выполнять животное, вводите команды через запятую");
+        this.commands      = new ArrayList<>();
+        this.commands.addAll(Menu.enterStringList("Укажите, какие команды умеет выполнять животное, вводите команды через запятую"));
         this.ruCustomClass = ruCustomClass;
     }
 
@@ -91,7 +89,10 @@ public abstract class Animals {
 
         commands = new ArrayList<>();
         if (!description[5].equals("Животное ничему не обучено")){
-            commands = List.of(description[5].split(", "));
+            List<String> tempList = Arrays.asList(description[5].split(", "));
+            tempList.forEach(s -> {
+                commands.add(s);
+            });
         }
 
     }
